--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "express",
+  "name": "node-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "author": "Ruben Dopico Novo",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.4.5"
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3",
-    "@types/jsonwebtoken": "^9.0.6"
+    "typescript": "^5.4.3"
   }
 }
