--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon",
-    "test": "jest"
+    "start": "",
+    "dev": "nodemon",
+    "test": "jest",
+    "build": "tsc && npm build",
+    "deploy": "npm run build && serverless deploy"
   },
   "author": "Ruben Dopico Novo",
   "license": "ISC",
@@ -13,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "serverless": "^3.38.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
