FIX: all routes to private

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "node-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "server.ts",
   "scripts": {
-    "start": "",
+    "start": "node ./dist/server.js",
     "dev": "nodemon",
     "test": "jest",
-    "build": "tsc --build ./dist",
+    "build": "tsc --build",
     "deploy": "npm run build && serverless deploy"
   },
   "author": "Ruben Dopico Novo",
