ADD: spec.json to use rapidoc

--- a/serverless.yml
+++ b/serverless.yml
@@ -20,8 +20,8 @@ functions:
       - http:
           path: /
           method: ANY
-          cors: true
+          cors: false
       - http:
           path: /{proxy+}
           method: ANY
-          cors: true
+          cors: false
