--- a/serverless.yml
+++ b/serverless.yml
@@ -20,8 +20,8 @@ functions:
       - http:
           path: /
           method: ANY
-          cors: false
+          cors: true
       - http:
           path: /{proxy+}
           method: ANY
-          cors: false
+          cors: true
