--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.0",
+    "mysql2": "^3.9.7",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.7",
     "@types/supertest": "^6.0.2",
     "nodemon": "^3.1.0",
     "serverless": "^3.38.0",
